--- a/Form-validation/index.html
+++ b/Form-validation/index.html
@@ -138,6 +138,11 @@
                 document.querySelector('.hobbyError').classList.add('d-none')
 
             }
+            // date
+            if(dob.value.trim===""){
+                document.querySelector('.dobError').classList.remove('d-none')
+
+            }
         }
 
     </script>
