--- a/Form-validation/index.html
+++ b/Form-validation/index.html
@@ -143,6 +143,9 @@
                 document.querySelector('.dobError').classList.remove('d-none')
 
             }
+            else{
+                document.querySelector('.dobError').classList.add('d-none')
+            }
         }
 
     </script>
