--- a/Form-validation/index.html
+++ b/Form-validation/index.html
@@ -16,7 +16,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <form action="" method="post" onsubmit="validate(); return false">
-                    <h2>Sing-Up</h2>
+                    <h2>Sign-Up</h2>
                     <!-- username -->
                     <div class="mb-3">
                         <label for="username" class="form-label">username</label>
