--- a/calculator/index.html
+++ b/calculator/index.html
@@ -44,6 +44,17 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        let buttons=document.querySelectorAll('button');
+        let array=['+','-','*','/'];
+        let display=document.querySelector('#display');
+
+        buttons.forEach((button)=>{
+            button.addEventListener('click',(e)=>{
+                let valu
+            })
+        })
+    </script>
 </body>
 
 </html>
