--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -17,7 +16,7 @@
                 <input type="text" class="form-control text-end mb-2" id="display" readonly>
 
                 <div class="row row-cols-4 g-2">
-                  
+
                     <div class="col"><button class="btn btn-primary w-100">7</button></div>
                     <div class="col"><button class="btn btn-primary w-100">8</button></div>
                     <div class="col"><button class="btn btn-primary w-100">9</button></div>
@@ -33,7 +32,7 @@
                     <div class="col"><button class="btn btn-primary w-100">3</button></div>
                     <div class="col"><button class="btn btn-primary w-100">-</button></div>
 
-                     <div class="col"><button class="btn btn-primary w-100 btn-rounded">0</button></div>
+                    <div class="col"><button class="btn btn-primary w-100 btn-rounded">0</button></div>
                     <div class="col"><button class="btn btn-primary w-100">*</button></div>
                     <div class="col"><button class="btn btn-primary w-100">/</button></div>
                     <div class="col"><button class="btn btn-primary w-100">=</button></div>
@@ -45,21 +44,38 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        let buttons=document.querySelectorAll('button');
-        let array=['+','-','*','/'];
-        let display=document.querySelector('#display');
+        let buttons = document.querySelectorAll('button');
+        let array = ['+', '-', '*', '/'];
+        let display = document.querySelector('#display');
 
-        buttons.forEach((button)=>{
-            button.addEventListener('click',(e)=>{
-                let value=e.target.innerText;
-                if(value=='='){
-                    display.value=eval(display.value);
+        buttons.forEach((button) => {
+            button.addEventListener('click', (e) => {
+                let value = e.target.innerText;
+                let displayValue = display.innerText;
+                let last = displayValue[displayValue.lenght - 1];
+                let removeLastStr = displayValue.slice(0, -1)
+                if (value == '=') {
+                    display.value = eval(display.value);
                 }
-                else if(value=='C'){
-                    display.value='';
+                else if (value == 'C') {
+                    display.value = '';
                 }
-                else{
-                    display.value+=value;
+                else if (array.includes(value)) {
+                    if (last == value) {
+                        display.value == display.value;
+                    }
+                    else {
+                        if (array.includes(last)) {
+                            display.value = removeLastStr + value;
+                        }
+                        else {
+                            display.value += value;
+                        }
+                    }
+
+                }
+                else {
+                    display.value += value;
                 }
             })
         })
