--- a/calculator/index.html
+++ b/calculator/index.html
@@ -51,8 +51,8 @@
         buttons.forEach((button) => {
             button.addEventListener('click', (e) => {
                 let value = e.target.innerText;
-                let displayValue = display.innerText;
-                let last = displayValue[displayValue.lenght - 1];
+                let displayValue = display.value;
+                let last = displayValue.slice(-1);
                 let removeLastStr = displayValue.slice(0, -1)
                 if (value == '=') {
                     display.value = eval(display.value);
