--- a/OOPs/class-this-new/index.html
+++ b/OOPs/class-this-new/index.html
@@ -1,4 +1,5 @@
-class Student {
+<script>
+    class Student {
     constructor(userName, age, grade, course, subCourse) {
         this.userName = userName;
         this.age = age;
@@ -36,3 +37,4 @@ console.log("-------------------------");
 std2.getData();
 console.log("-------------------------");
 std3.getData();
+</script>
