--- a/timer_counter/index.html
+++ b/timer_counter/index.html
@@ -8,13 +8,14 @@
   </head>
   <body>
    <div class="container">
-    <div class="row">
+    <div class="row justify-content-center mt-3">
         <div class="col-md-4">
-            <div class="timer">
-                00:<span id="time">10</span>
+            <div class="timer bg-info p-2">
+                00:<span id="time">60</span>
             </div>
-            <button class="btn btn-primary mt-2" id="start-btn">Start</button>
-            <button class="btn btn-primary mt-2" id="stop-btn">Stop</button>
+            <button onclick="startTimer()" class="btn btn-primary mt-2" id="start-btn">Start</button>
+            <button onclick="stopTimer()" class="btn btn-primary mt-2" id="stop-btn">Stop</button>
+            <button onclick="resetTimer()" class="btn btn-primary mt-2" id="reset-btn">Reset</button>
         </div>
     </div>
    </div>
@@ -31,5 +32,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+  <script src="./script.js"></script>
+</body>
 </html>
