--- a/timer_counter/index.html
+++ b/timer_counter/index.html
@@ -6,31 +6,21 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="bg-danger-subtle">
    <div class="container">
     <div class="row justify-content-center mt-3">
-        <div class="col-md-4">
-            <div class="timer bg-info p-2">
+        <div class="col-md-4 position-absolute top-50 start-50 translate-middle">
+            <div class="timer p-2 mt-2 text-center  fs-1 fw-semibold ">
                 00:<span id="time">60</span>
             </div>
-            <button onclick="startTimer()" class="btn btn-primary mt-2" id="start-btn">Start</button>
-            <button onclick="stopTimer()" class="btn btn-primary mt-2" id="stop-btn">Stop</button>
-            <button onclick="resetTimer()" class="btn btn-primary mt-2" id="reset-btn">Reset</button>
+            <div class="button justify-content-center d-flex align-items-center gap-3">
+              <button onclick="startTimer()" class="btn btn-outline-primary mt-3" id="start-btn">Start</button>
+            <button onclick="stopTimer()" class="btn btn-outline-danger mt-3" id="stop-btn">Stop</button>
+            <button onclick="resetTimer()" class="btn btn-outline-success mt-3" id="reset-btn">Reset</button>
+            </div>
         </div>
     </div>
    </div>
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="./script.js"></script>
 </body>
