--- a/localstorge/index.html
+++ b/localstorge/index.html
@@ -27,7 +27,7 @@
                         <label for="password" id="form-label">Passowrd</label>
                         <input type="text" name="password" id="password" class="form-control">
                     </div>
-                    <button class="btn btn-primary">Submit</button>
+                    <button id="btn" class="btn btn-secondary">Submit</button>
                 </form>
             </div>
         </div>
@@ -39,10 +39,14 @@
                             <th>Sr. No</th>
                             <th>username</th>
                             <th>Email</th>
-                            <th>password</th>
+                            <th>Password</th>
+                            <th>Action</th>
                         </tr>
                     </thead>
-                    <tbody></tbody>
+                    <tbody>
+                        <td><button class="btn btn-danger">Delete</button></td>
+                        <td><button class="btn btn-Warning">Edit</button></td>
+                    </tbody>
                 </table>
             </div>
         </div>
