--- a/localstorge/student/index.html
+++ b/localstorge/student/index.html
@@ -1,17 +1,44 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
 
-    
+<body>
+    <div class="container">
+        <div class="row justify-content-center mt-3 p-3">
+            <div class="col-md-4">
+                <h1>Student From</h1>
+
+                <form action="" method="post" id="form">
+                    <div class="mb-3">
+                        <label for="firstname" id="form-label">First Name</label>
+                        <input type="text" name="firstname" id="firstname" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="lastname" id="form-label">Last Name</label>
+                        <input type="text" name="lastname" id="lastname" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="lastname" id="form-label">Last Name</label>
+                        <input type="text" name="lastname" id="lastname" class="form-control">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
