--- a/localstorge/student/index.html
+++ b/localstorge/student/index.html
@@ -25,9 +25,10 @@
                         <input type="text" name="lastname" id="lastname" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="lastname" id="form-label">Last Name</label>
-                        <input type="text" name="lastname" id="lastname" class="form-control">
+                        <label for="grid" id="form-label">Gr Id</label>
+                        <input type="text" name="grid" id="grid" class="form-control">
                     </div>
+                    <button id="btn" class="btn btn-primary">Submit</button>
                 </form>
             </div>
         </div>
