--- a/localstorge/employee/index.html
+++ b/localstorge/employee/index.html
@@ -13,20 +13,20 @@
     <div class="container">
         <div class="row justify-content-center mt-3 p-3">
             <div class="col-md-4">
-                <h1>Student From</h1>
+                <h1>employe From</h1>
 
                 <form action="" method="post" id="form">
                     <div class="mb-3">
-                        <label for="firstname" id="form-label">First Name</label>
-                        <input type="text" name="firstname" id="firstname" class="form-control">
+                        <label for="ename" id="form-label">First Name</label>
+                        <input type="text" name="ename" id="ename" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="lastname" id="form-label">Last Name</label>
-                        <input type="text" name="lastname" id="lastname" class="form-control">
+                        <label for="department" id="form-label">Department</label>
+                        <input type="text" name="department" id="department" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="grid" id="form-label">Gr Id</label>
-                        <input type="text" name="grid" id="grid" class="form-control">
+                        <label for="salary" id="form-label">Salary</label>
+                        <input type="text" name="salary" id="salary" class="form-control">
                     </div>
                     <button id="btn" class="btn btn-primary">Submit</button>
                 </form>
@@ -38,9 +38,11 @@
                     <thead>
                         <tr>
                             <th>Sr. No</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th>Grid</th>
+                            <th> Name</th>
+                            <th>
+                            Department
+                            </th>
+                            <th>salary</th>
                             <th>Action</th>
                         </tr>
                     </thead>
