--- a/localstorge/index.html
+++ b/localstorge/index.html
@@ -73,6 +73,8 @@
                             <th>username</th>
                             <th>Email</th>
                             <th>Password</th>
+                            <th>Gender</th>
+                            <th>Hobby</th>
                             <th>Action</th>
                         </tr>
                     </thead>
