--- a/localstorge/index.html
+++ b/localstorge/index.html
@@ -15,27 +15,27 @@
             <div class="col-md-4">
                 <h1>Registration From</h1>
                 <form method="post" id="form">
-                    <div class="mb-3">
-                        <label for="username" id="form-label fw-bold">User Name</label>
+                    <div class="mb-3  fw-bold">
+                        <label for="username" id="form-label">User Name</label>
                         <input type="text" name="username" id="username" class="form-control">
                     </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label fw-bold">Email</label>
+                    <div class="mb-3 fw-bold">
+                        <label for="email" class="form-label ">Email</label>
                         <input type="text" class="form-control" id="email">
                     </div>
-                    <div class="mb-3">
-                        <label for="password" id="form-label fw-bold">Passowrd</label>
+                    <div class="mb-3 fw-bold">
+                        <label for="password" id="form-label ">Passowrd</label>
                         <input type="text" name="password" id="password" class="form-control">
                     </div>
                     <label class="form-label fw-bold">Gender</label>
                     <div class="mb-3">
                         <div class="form-check form-check-inline">
                             <label class="form-check-label" for="gender1">Male</label>
-                            <input type="radio" class="form-check-input " name="gender" id="gender1">
+                            <input type="radio" class="form-check-input "  value="Male" name="gender" id="gender1">
                         </div>
                         <div class="form-check form-check-inline">
                             <label class="form-check-label" for="gender2">Female</label>
-                            <input type="radio" class="form-check-input" name="gender" id="gender2">
+                            <input type="radio" class="form-check-input" value="Female" name="gender" id="gender2">
                         </div>
                     </div>
                     <label class="form-label fw-bold">Hobby</label>
