--- a/localstorge/student/index.html
+++ b/localstorge/student/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>student</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -25,8 +25,20 @@
                         <input type="text" name="lastname" id="lastname" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="grid" id="form-label">Gr Id</label>
-                        <input type="text" name="grid" id="grid" class="form-control">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" name="email" id="email" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="enroll-num" class="form-label">Enrollment Number</label>
+                        <input type="number" name="enroll-num" id="enroll-num" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="course" class="form-label">Course</label>
+                        <input type="text" name="course" id="course" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="sub-course" class="form-label">Sub-Course</label>
+                        <input type="text" name="sub-course" id="sub-course" class="form-control">
                     </div>
                     <button id="btn" class="btn btn-primary">Submit</button>
                 </form>
@@ -37,11 +49,15 @@
                 <table id="table" class="table table-striped">
                     <thead>
                         <tr>
-                            <th>Sr. No</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th>Grid</th>
-                            <th>Action</th>
+                            <tr>
+                                <th>Sr No.</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Enrollment Number</th>
+                                <th>Course</th>
+                                <th>Sub-Course</th>
+                                <th>Action</th>
+                            </tr>
                         </tr>
                     </thead>
                     <tbody>
