--- a/localstorge/student/index.html
+++ b/localstorge/student/index.html
@@ -1,80 +1,71 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>student</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Form</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
-
 <body>
     <div class="container">
         <div class="row justify-content-center mt-3 p-3">
-            <div class="col-md-4">
-                <h1>Student From</h1>
-
-                <form action="" method="post" id="form">
-                    <div class="mb-3">
-                        <label for="firstname" id="form-label">First Name</label>
-                        <input type="text" name="firstname" id="firstname" class="form-control">
+            <div class="col-md-4 ">
+                <h1 class="mb-3">Student Form</h1>
+                <form method="post" id="form">
+                    <div class="mb-3 fw-bold" >
+                        <label for="fname" class="form-label">First Name</label>
+                        <input type="text" name="fname" id="fname" class="form-control">
                     </div>
-                    <div class="mb-3">
-                        <label for="lastname" id="form-label">Last Name</label>
-                        <input type="text" name="lastname" id="lastname" class="form-control">
+                    <div class="mb-3 fw-bold" >
+                        <label for="lname" class="form-label">Last Name</label>
+                        <input type="text" name="lname" id="lname" class="form-control">
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-3 fw-bold" >
                         <label for="email" class="form-label">Email</label>
                         <input type="email" name="email" id="email" class="form-control">
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-3 fw-bold" >
                         <label for="enroll-num" class="form-label">Enrollment Number</label>
                         <input type="number" name="enroll-num" id="enroll-num" class="form-control">
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-3 fw-bold" >
                         <label for="course" class="form-label">Course</label>
                         <input type="text" name="course" id="course" class="form-control">
                     </div>
-                    <div class="mb-3">
+                    <div class="mb-3 fw-bold" >
                         <label for="sub-course" class="form-label">Sub-Course</label>
                         <input type="text" name="sub-course" id="sub-course" class="form-control">
                     </div>
-                    <button id="btn" class="btn btn-primary">Submit</button>
+                    <div class="mb-3 fw-bold" >
+                        <button class="btn btn-info">Submit</button>
+                    </div>
                 </form>
-            </div>
-        </div>
-        <div class="row justify-content-center mt-3">
-            <div class="col-md-8">
-                <table id="table" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <tr>
-                                <th>Sr No.</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Enrollment Number</th>
-                                <th>Course</th>
-                                <th>Sub-Course</th>
-                                <th>Action</th>
-                            </tr>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <td><button class="btn btn-danger">Delete</button></td>
-                        <td><button class="btn btn-Warning">Edit</button></td>
-                    </tbody>
-                </table>
             </div>
         </div>
     </div>
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <table id="table" class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Sr No.</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Enrollment Number</th>
+                            <th>Course</th>
+                            <th>Sub-Course</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
+    </div>
+   
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./script.js"></script>
 </body>
-
 </html>
